# pytest-trial

./: .gitignore  README.md  config.yml  pyproject.toml
docs/: pytest_skip.md  pytest_type.md
src/ft-automation/: main.py
tests/: conftest.py  test_trial1.py  test_trial2.py
tests/disk/: test_raid.py
tests/helper/: config.py
tests/lib/: config.py
tests/network/: test_skip.py  test_version_check.py
